--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+
+    <div class="pimg1">
+        <div class="ptext">
+            <span class="border">
+                Journey to Mars
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-light">
+        <h2>Mars</h2>
+        <p>
+            Mars, the fourth planet from the Sun, known as the "Red Planet" for its distinct reddish hue, is a
+            fascinating world with half the diameter of Earth and a gravity 37% that of Earth's. It boasts the largest
+            volcano and the deepest canyon in the solar system, Olympus Mons and Valles Marineris, respectively. Mars
+            has a thin atmosphere, primarily of carbon dioxide, and features such as ancient riverbeds and polar ice
+            caps suggest it once harbored liquid water, offering clues to a potentially more hospitable past. The planet
+            experiences dynamic weather, including massive dust storms, and has two small moons, Phobos and Deimos. It
+            has been the focus of numerous robotic explorations, revealing insights into its geology and potential for
+            ancient microbial life. With ongoing plans for human missions, Mars remains a key target for future
+            exploration, promising to unravel more secrets of our solar system and the possibility of life beyond Earth.
+        </p>
+    </section>
+    <div class="pimg2">
+        <div class="ptext">
+            <span class="border">
+                Starship
+            </span>
+        </div>
+    </div>
+
+    <section class="section section-dark">
+        <h2>Starship at Starbase</h2>
+        <p>
+            SpaceX's Starship is a groundbreaking, fully reusable spacecraft designed to transport up to 100 people and
+            cargo to Earth orbit, the Moon, Mars, and potentially beyond. It features a two-stage design with the Super
+            Heavy booster and the Starship upper stage, both powered by methane-fueled Raptor engines, emphasizing
+            reusability and cost reduction in space travel. Starship's versatility supports a wide array of missions,
+            from satellite launches and International Space Station servicing to interplanetary exploration, notably
+            including NASA's Artemis lunar missions. Its development, marked by iterative testing at SpaceX's Boca Chica
+            facility, showcases innovative design elements like a heat-resistant shield for atmospheric re-entry. Beyond
+            immediate space exploration goals, Starship aims to enable sustainable human presence on Mars and
+            revolutionize space travel, backed by both private investment and strategic partnerships, including
+            significant contracts from NASA.
+        </p>
+    </section>
+
+    <div class="pimg3">
+        <div class="ptext">
+            <span class="border">
+                Rover
+            </span>
+        </div>
+    </div>
+
+
+    <section class="section section-dark">
+        <h2>Perseverance</h2>
+        <p> Mission Name: Mars 2020
+            Rover Name: Perseverance
+            Main Job: Seek signs of ancient life and collect samples of rock and regolith (broken rock and soil) for
+            possible return to Earth.
+            Launch: July 30, 2020
+            Landing: Feb. 18, 2021, Jezero Crater, Mars
+            Helicopter: The Mars Helicopter completed its 30-day technology demonstration and continues in its
+            operations demo phase.
+
+        </p>
+    </section>
+
+    <div class="pimg1">
+        <div class="ptext">
+            <span class="border">
+                The End
+            </span>
+        </div>
+    </div>
+</body>
+
+</html>
