--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <div class="pimg2">
         <div class="ptext">
-            <span class="border">
+            <span class="border trans">
                 Starship
             </span>
         </div>
@@ -58,7 +58,7 @@
 
     <div class="pimg3">
         <div class="ptext">
-            <span class="border">
+            <span class="border trans">
                 Rover
             </span>
         </div>
